Fixed an error in BIRT data engine in evaluating conditional expressions, which is used by the report highlight feature.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -3,41 +3,41 @@
 
 ###########################################################
 #for test only
-Error.Msg001={0} not found in {1}.
+Error.Msg001={0} not found in {0}.
 
 ###########################################################
 
 # DTE error code
 UNDEFINED_DATA_SOURCE=Undefined data source used in data set
-UNDEFINED_DATASOURCE=Data Source not defined: {1}
+UNDEFINED_DATASOURCE=Data Source not defined: {0}
 UNSUPPORTED_DATASOURCE_TYPE=Unsupported data source type
 UNSUPPORTED_DATASET_TYPE=Unsupported data set type
 UNDEFINED_DATASET_USED=Report query uses undefined data set
 
 NOT_END_GROUP=This aggregate expression is only available at the end of a group
-INVALID_GROUP_LEVEL=Invalid grouping level for aggregate function: {1}
-INVALID_AGGR_PARAMETER=Wrong number of arguments to aggregate function: {1}
+INVALID_GROUP_LEVEL=Invalid grouping level for aggregate function: {0}
+INVALID_AGGR_PARAMETER=Wrong number of arguments to aggregate function: {0}
 
-DUPLICATE_PROPERTY_NAME=Invalid use of duplicate property name: {1}
+DUPLICATE_PROPERTY_NAME=Invalid use of duplicate property name: {0}
 SUBQUERY_NOT_FOUND=Subquery name not found
 
 CONDITIONAL_EXPR_NOT_SUPP=Conditional expression not supported
-MISSING_DRIVERNAME=Missing driverName in data source definition, {1}
+MISSING_DRIVERNAME=Missing driverName in data source definition, {0}
 
 RESULT_CLOSED=ResultIterator has been closed.
 RESULT_ENDED=Cursor has no current row.
 INVALID_JS_EXPR=Invalid Javascript expression
-INVALID_TOTAL_NAME=Invalid Total function name: {1}
+INVALID_TOTAL_NAME=Invalid Total function name: {0}
 INVALID_CALL_AGGR=Aggregate function call is not expected in this expression.
 INVALID_EXPR_HANDLE=Invalid expression handle
 
 NO_CURRENT_ROW=No current row
 IT_NOT_STARTED=This iterator has not started
-INVALID_KEY_COLUMN=Invalid sort key column: {1}
+INVALID_KEY_COLUMN=Invalid sort key column: {0}
 INVALID_GROUP_LEVEL_1=Invalid group level
-INVALID_GROUP_KEY_COLUMN=Invalid group key column name: {1}
+INVALID_GROUP_KEY_COLUMN=Invalid group key column name: {0}
 INVALID_CLOSESCRIPT=Fails to evaluate closeScript in CustomDataSet
-INVALID_CUSTOM_FIELD_INDEX=Invalid custom field index: {1}
+INVALID_CUSTOM_FIELD_INDEX=Invalid custom field index: {0}
 
 INVALID_OPENSCRIPT=Fails to evaluate openScript in CustomDataSet
 DS_HAS_OPENED=DataSource is already open
@@ -48,10 +48,10 @@ NO_RESULT_SET=Query statement execution returns no result set
 METADATA_NOT_AVAILABLE=Result metadata not available
 QUERY_HAS_PREPARED=Query already prepared.
 TYPE_NOT_SUPPORT=type is not supported
-INAVLID_FIELD_NAME=Invalid field name: {1}
-DUPLICATE_COLUMN_NAME=Duplicate column name: {1}
-DUPLICATE_ALIAS_NAME=Duplicate column name or alias: {1}
-INVALID_FIELD_INDEX=Invalid field index: {1}
+INAVLID_FIELD_NAME=Invalid field name: {0}
+DUPLICATE_COLUMN_NAME=Duplicate column name: {0}
+DUPLICATE_ALIAS_NAME=Duplicate column name or alias: {0}
+INVALID_FIELD_INDEX=Invalid field index: {0}
 
 INVALID_TYPE=Invalid type
 UNSUPPORTED_DATA_TYPE=Unsupported data type!
@@ -60,12 +60,12 @@ ILLEGAL_PARAMETER=User doesn't input correct parameter or enough parameter
 ILLEGAL_DATA=There exists illegal data
 NO_SOLUTION_FOUND=NOSOLUTIONFOUND
 INVALID_FETCH_SCIRPT=Fetch script of Scripted DataSet is not valid.
-CONVERT_FAILS=Can not convert it to {1}.
+CONVERT_FAILS=Can not convert it to {0}.
 TYPE_NOT_SUPPORTED=Type is not supported
-INVALID_FIELD_NAME=Invalid field name: {1}
+INVALID_FIELD_NAME=Invalid field name: {0}
 NOT_SUPPORTED_TYPE=Not supported type
 
-ILLEGAL_PARAMETER_FUN=There exists illegal parameter in the function {1}
+ILLEGAL_PARAMETER_FUN=There exists illegal parameter in the function {0}
 RESET_RATE=User should reset a new rate guess
 
 # Wrapper Error
@@ -79,5 +79,4 @@ DS_COLUMN_HINTS_ERROR=DS_COLUMN_HINTS_ERROR
 DS_PARAMETER_ERROR=DS_PARAMETER_ERROR
 DS_COMPUTED_COLUMN_ERROR=DS_COMPUTED_COLUMN_ERROR
 
-JAVA_SCRIPT_ERROR=JAVA_SCRIPT_ERROR
-EVALUATE_ERROR=EVALUATE_ERROR
+SCRIPT_EVAL_ERROR=Error evaluating script (source:{0}, line:{1}):  {2}.
