Implemented most of the Data-related scripting objects defined to be available in the 1st release in the current draft version of ROM scripting spec.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -8,11 +8,10 @@ Error.Msg001={0} not found in {0}.
 ###########################################################
 
 # DTE error code
-UNDEFINED_DATA_SOURCE=Undefined data source used in data set
-UNDEFINED_DATASOURCE=Data Source not defined: {0}
+UNDEFINED_DATA_SOURCE=Data source {0} is not defined
+UNDEFINED_DATA_SET=Data set {0} is not defined
 UNSUPPORTED_DATASOURCE_TYPE=Unsupported data source type
 UNSUPPORTED_DATASET_TYPE=Unsupported data set type
-UNDEFINED_DATASET_USED=Report query uses undefined data set
 
 NOT_END_GROUP=This aggregate expression is only available at the end of a group
 INVALID_GROUP_LEVEL=Invalid grouping level for aggregate function: {0}
@@ -78,5 +77,5 @@ DS_OPEN_ERROR=DS_OPEN_ERROR
 DS_COLUMN_HINTS_ERROR=DS_COLUMN_HINTS_ERROR
 DS_PARAMETER_ERROR=DS_PARAMETER_ERROR
 DS_COMPUTED_COLUMN_ERROR=DS_COMPUTED_COLUMN_ERROR
-
 SCRIPT_EVAL_ERROR=Error evaluating script (source:{0}, line:{1}):  {2}.
+PREPARED_QUERY_CLOSED=PreparedQuery instance is closed.
