Catch RuntimeException in query to gurantee external caller only need catch DataException.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -79,3 +79,5 @@ DS_PARAMETER_ERROR=DS_PARAMETER_ERROR
 DS_COMPUTED_COLUMN_ERROR=DS_COMPUTED_COLUMN_ERROR
 SCRIPT_EVAL_ERROR=Error evaluating script (source:{0}, line:{1}):  {2}.
 PREPARED_QUERY_CLOSED=PreparedQuery instance is closed.
+
+QUERY_FAILURE = Invalid query definition
