--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -81,3 +81,4 @@ SCRIPT_EVAL_ERROR=Error evaluating script (source:{0}, line:{1}):  {2}.
 PREPARED_QUERY_CLOSED=PreparedQuery instance is closed.
 
 QUERY_FAILURE = Invalid query definition
+NULL_POINTER = There's null pointer.
