Revise last checkin of SCR#75276.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -82,3 +82,5 @@ PREPARED_QUERY_CLOSED=PreparedQuery instance is closed.
 
 QUERY_FAILURE = Invalid query definition
 NULL_POINTER = There's null pointer.
+
+INVALID_EXPR = Expression is not valid.
