Add the error check for the case that the extension name of an extended item is missing or wrong

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2478,7 +2478,8 @@ Error.SemanticError.NEGATIVE_LINE_HEIGHT=The line height of element "{0}" must b
 Error.SemanticError.DUPLICATE_GROUP_NAME=The table/list "{0}" has duplicate group name "{1}".
 Error.SemanticError.INVALID_CUSTOM_COLOR_NAME=The custom color name "{0}" can not be used because it is a CSS standard color name.
 Error.SemanticError.DUPLICATE_CUSTOM_COLOR_NAME=The color pallete has duplicate custom color name "{0}".
-Error.SemanticError.EXTENSION_NOT_FOUND=The extension peer is not found.
+Error.SemanticError.EXTENSION_NOT_FOUND=The extension name "{0}" of element "{1}" is not found.
+Error.SemanticError.MISSING_EXTENSION=The extension name of element "{0}" must be defined.
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
