Change a message display name

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1758,7 +1758,7 @@ Element.ReportDesign.createdBy=Created By
 Element.ReportDesign.units=Units
 Element.ReportDesign.refreshRate=Refresh Rate
 Element.ReportDesign.base=Base
-Element.ReportDesign.msgBaseName=Base
+Element.ReportDesign.msgBaseName=Message Base Name
 Element.ReportDesign.title=Title
 Element.ReportDesign.titleID=Title Key
 Element.ReportDesign.description=Description
