Provided interal property name for property sheet.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1894,22 +1894,22 @@ Element.Style.background.positionX=Horizontal position
 Element.Style.background.positionY=Vertical position
 Element.Style.background.repeat=Repeat
 Element.Style.border=Border
-Element.Style.border.bottom.color=Bottom
-Element.Style.border.bottom.style=Bottom
-Element.Style.border.bottom.width=Bottom
+Element.Style.border.bottom.color=Border Bottom Color
+Element.Style.border.bottom.style=Border Bottom Style
+Element.Style.border.bottom.width=Border Bottom Width
 Element.Style.border.fillColor=Border Fill Color
 Element.Style.border.hmiddle.color=Border Horizonontal Middle Color
 Element.Style.border.hmiddle.style=Border Horizonontal Middle Style
 Element.Style.border.hmiddle.width=Border Horizonontal Middle Width
-Element.Style.border.left.color=Left
-Element.Style.border.left.style=Left
-Element.Style.border.left.width=Left
-Element.Style.border.right.color=Right
-Element.Style.border.right.style=Right
-Element.Style.border.right.width=Right
-Element.Style.border.top.color=Top
-Element.Style.border.top.style=Top
-Element.Style.border.top.width=Top
+Element.Style.border.left.color=Border Left Color
+Element.Style.border.left.style=Border Left Style
+Element.Style.border.left.width=Border Left Width
+Element.Style.border.right.color=Border Right Color
+Element.Style.border.right.style=Border Right Style
+Element.Style.border.right.width=Border Right Width
+Element.Style.border.top.color=Border Top Color
+Element.Style.border.top.style=Border Top Style
+Element.Style.border.top.width=Border Top Width
 Element.Style.border.vmiddle.color=Border Vertical Middle Color
 Element.Style.border.vmiddle.style=Border Vertical Middle Style
 Element.Style.border.vmiddle.width=Border Vertical Middle Width
