Color, Dimension, ConfigVariable and Report java-script object supports.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1937,16 +1937,16 @@ Element.Style.letterSpacing=Letter spacing
 Element.Style.lineHeight=Line height
 Element.Style.map.rules=Map Rules
 Element.Style.map.testExpr=Map Test Expression
-Element.Style.margin.top=Top
-Element.Style.margin.bottom=Bottom
-Element.Style.margin.left=Left
-Element.Style.margin.right=Right
+Element.Style.margin.top=Margin Top
+Element.Style.margin.bottom=Margin Bottom
+Element.Style.margin.left=Margin Left
+Element.Style.margin.right=Margin Right
 Element.Style.masterPage=MasterPage
 Element.Style.padding=Padding
-Element.Style.padding.bottom=Bottom
-Element.Style.padding.left=Left
-Element.Style.padding.right=Right
-Element.Style.padding.top=Top
+Element.Style.padding.bottom=Padding Bottom
+Element.Style.padding.left=Padding Left
+Element.Style.padding.right=Padding Right
+Element.Style.padding.top=Padding Top
 Element.Style.pageBreakBefore=Before
 Element.Style.pageBreakAfter=After
 Element.Style.pageBreakInside=Inside
