Fix SCR#75409: Set an error  key to table group and Nullpointexception is thrown

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -84,3 +84,4 @@ QUERY_FAILURE = Invalid query definition
 NULL_POINTER = There's null pointer.
 
 INVALID_EXPR = Expression is not valid.
+INVALID_GROUP_EXPR = Group key expression {0} is not valid.
