DataException/i18n/Parameter metadata support in odaconsumer

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -46,6 +46,7 @@ CUSTOM_FIELD_DUPLICATED=Custom field name must not be duplicated
 NO_RESULT_SET=Query statement execution returns no result set
 METADATA_NOT_AVAILABLE=Result metadata not available
 QUERY_HAS_PREPARED=Query already prepared.
+QUERY_HAS_NOT_PREPARED=The query is not prepared yet.
 TYPE_NOT_SUPPORT=type is not supported
 INAVLID_FIELD_NAME=Invalid field name: {0}
 DUPLICATE_COLUMN_NAME=Duplicate column name: {0}
@@ -85,3 +86,89 @@ NULL_POINTER = There's null pointer.
 
 INVALID_EXPR = Expression is not valid.
 INVALID_GROUP_EXPR = Group key expression {0} is not valid.
+
+odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
+odaconsumer.ColumnPositionIsOneBased=Column position cannot be less than 1.
+odaconsumer.ColumnAliasCannotBeEmpty=Column alias cannot be an empty string.
+odaconsumer.CannotProcessOdaConfigFile=Cannot process the ({0}) driver's odaconfig.xml.
+odaconsumer.OdaInitEntryNotFound={0} cannot be found or cannot be instantiated.
+odaconsumer.OdaDriverOnUnsupportedPlatform=The driver ({0}) does not support {1}.
+odaconsumer.CannotGenerateUrl=Cannot generate URL ({0}) for the classloader.
+odaconsumer.UnsupportedNativeType=Unsupported native type ({0}) for the data set type ({1}) of driver ({2}).
+odaconsumer.UnsupportedDataSetType=The data set type ({0}) is not supported by the driver({1}).
+odaconsumer.ParameterNameCannotBeEmptyOrNull=Parameter name cannot be empty or null.
+odaconsumer.ParameterPositionIsOneBased=Parameter position cannot be less than 1.
+odaconsumer.CannotGetParameterTypeName=Cannot get the type name for parameter ({0}).
+odaconsumer.CannotGetParameterMode=Cannot get the mode for parameter ({0}).
+odaconsumer.CannotGetParameterScale=Cannot get the scale for parameter ({0}).
+odaconsumer.CannotGetParameterPrecision=Cannot get the precision for parameter ({0}).
+odaconsumer.CannotGetParameterIsNullable=Cannot determine the nullability for parameter ({0}).
+odaconsumer.NonInputParamMergeWithInputHint=The runtime parameter metadata cannot be merged with the input parameter hint ({0}) because the runtime parameter is not in the input mode.
+odaconsumer.NonOutputParamMergeWithOutputHint=The runtime parameter metadata cannot be merged with the output parameter hint ({0}) because the runtime parameter is not in the output mode.
+odaconsumer.SameParamNameForDifferentHints=Cannot use the same parameter name to represent different parameter hints.
+odaconsumer.ParameterValueIsNull=Parameter value is null.
+odaconsumer.UnsupportedParameterValueType=Unsupported parameter value type: {0}.
+odaconsumer.UnknownExceptionThrown=Unknown exception thrown in the last setter call.
+odaconsumer.CannotConvertIndexedParameterValue=Cannot convert the parameter value {0} at index ({1}) from the value type of ({2}) to the ODA type of ({3}).
+odaconsumer.CannotConvertNamedParameterValue=Cannot convert the parameter value {0} with the parameter name of ({1}) from the value type of ({2}) to the ODA type of ({3}).
+odaconsumer.UnrecognizedProjectedColumnName=Unrecognized projected column name: {0}.
+odaconsumer.ColumnNameOrAliasAlreadyUsed=The new column name or alias ({0}) is already used by the column at index {1}
+odaconsumer.NamedResultSetsUnsupported=This statement does not support named result sets.
+odaconsumer.OutputParameterUnsupported=This statement does not support output parameters.
+odaconsumer.CannotGetConnectionMetaData=Cannot get the connection metadata.
+odaconsumer.CannotGetMaxConnections=Cannot get the maximum number of connections for the data source.
+odaconsumer.CannotGetMaxStatements=Cannot get the maximum number of statements for the data source.
+odaconsumer.CannotGetDataSetMetaData=Cannot get the data set metadata ({0}) from the data source.
+odaconsumer.CannotPrepareStatement=Cannot prepare the query ({0}) for the data set type ({1}).
+odaconsumer.CannotCloseConnection=Cannot close the connection.
+odaconsumer.CannotOpenConnection=Cannot open the connection for the driver ({0}).
+odaconsumer.CannotDetermineSupportForMultipleOpenResults=Cannot determine the support for multiple open results.
+odaconsumer.CannotDetermineSupportForMultipleResultSets=Cannot determine the support for multiple result sets.
+odaconsumer.CannotDetermineSupportForNamedResultSets=Cannot determine the support for named result sets.
+odaconsumer.CannotDetermineSupportForNamedParameters=Cannot determine the support for named parameters.
+odaconsumer.CannotDetermineSupportForInParameters=Cannot determine the support for input parameters.
+odaconsumer.CannotDetermineSupportForOutParameters=Cannot determine the support for output parameters.
+odaconsumer.CannotSetStatementProperty=Cannot set statement property.
+odaconsumer.CannotSetSortSpec=Cannot set the sort specification.
+odaconsumer.CannotSetMaxRows=Cannot set max rows.
+odaconsumer.CannotGetResultSetMetaData=Cannot get the result set metadata.
+odaconsumer.CannotGetMetaDataForNamedResultSet=Cannot get the metadata for the named result set ({0}).
+odaconsumer.CannotExecuteStatement=Cannot execute the statement.
+odaconsumer.CannotGetResultSet=Cannot get the result set.
+odaconsumer.CannotGetNamedResultSet=Cannot get the named result set ({0}).
+odaconsumer.CannotFindOutParameter=Cannot find the output parameter ({0}).
+odaconsumer.CannotGetParameterType=Cannot get the type for parameter ({0}).
+odaconsumer.CannotCloseStatement=Cannot close the statement.
+odaconsumer.CannotGetColumnCount=Cannot get the column count.
+odaconsumer.CannotGetColumnName=Cannot get the name for column ({0}).
+odaconsumer.CannotGetColumnLabel=Cannot get the label for column ({0}).
+odaconsumer.CannotGetColumnType=Cannot get the type for column ({0}).
+odaconsumer.CannotFetchNextRow=Cannot fetch the next data row.
+odaconsumer.CannotDetermineWasNull=Cannot determine whether the last retrieved value was null.
+odaconsumer.CannotGetIntFromColumn=Cannot get the integer value from column ({0}).
+odaconsumer.CannotGetDoubleFromColumn=Cannot get the double value from column ({0}).
+odaconsumer.CannotGetStringFromColumn=Cannot get the string value from column ({0}).
+odaconsumer.CannotGetBigDecimalFromColumn=Cannot get the decimal value from column ({0}).
+odaconsumer.CannotGetDateFromColumn=Cannot get the date value from column ({0}).
+odaconsumer.CannotGetTimeFromColumn=Cannot get the time value from column ({0}).
+odaconsumer.CannotGetTimestampFromColumn=Cannot get the timestamp value column ({0}).
+odaconsumer.CannotGetRowPosition=Cannot get the current row position.
+odaconsumer.CannotCloseResultSet=Cannot close the result set.
+odaconsumer.CannotGetParameterCount=Cannot get the parameter count.
+odaconsumer.CannotGetIntFromParameter=Cannot get the integer value from parameter ({0}).
+odaconsumer.CannotGetDoubleFromParameter=Cannot get the double value from parameter ({0}).
+odaconsumer.CannotGetStringFromParameter=Cannot get the string value from parameter ({0}).
+odaconsumer.CannotGetBigDecimalFromParameter=Cannot get the decimal value from parameter ({0}).
+odaconsumer.CannotGetDateFromParameter=Cannot get the date value from the parameter ({0}).
+odaconsumer.CannotGetTimeFromParameter=Cannot get the time value from the parameter ({0}).
+odaconsumer.CannotGetTimestampFromParameter=Cannot get the timestamp value from the parameter ({0}).
+odaconsumer.CannotFindInParameter=Cannot find the input parameter ({0}).
+odaconsumer.CannotSetIntParameter=Cannot set the integer value for parameter ({0}).
+odaconsumer.CannotSetDoubleParameter=Cannot set the double value for parameter ({0}).
+odaconsumer.CannotSetStringParameter=Cannot set the string value for parameter ({0}).
+odaconsumer.CannotSetBigDecimalParameter=Cannot set the decimal value for parameter ({0}).
+odaconsumer.CannotSetDateParameter=Cannot set the date value for parameter ({0}).
+odaconsumer.CannotSetTimeParameter=Cannot set the time value for parameter ({0}).
+odaconsumer.CannotSetTimestampParameter=Cannot set the timestamp value for parameter ({0}).
+odaconsumer.CannotClearInParameters=Cannot clear the input parameter values.
+odaconsumer.UnrecognizedOdaType=Unrecognized ODA data type: {0}.
