Implement Like operator

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -68,6 +68,8 @@ NOT_SUPPORTED_TYPE=Not supported type
 ILLEGAL_PARAMETER_FUN=There exists illegal parameter in the function {0}
 RESET_RATE=User should reset a new rate guess
 
+UNSUPPORTTED_OPERATOR=The operator is not yet supported
+
 # Wrapper Error
 INVALID_TYPE_IN_EXPR=Invalid data types in conditional expression.
 AGGREGATION_ERROR=AGGREGATION_ERROR
