Rename the ExtendedDataSet and ExtendedDataSource to OdaDataSet and OdaDataSource. Remove the QueryChoiceType from OdaDataSet.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1740,13 +1740,10 @@ Element.SimpleMasterPage=Simple Master Page
 Element.MultiLineData=Multi line data
 Element.ExtendedItem=Extended item
 Element.ScriptDataSource=Script Data Source
-Element.OdaDataSource=ODA Data Source
-Element.DaxDataSource=Dax Data Source
-Element.DaxDataSet=Dax Data Set
 Element.ScriptDataSet=Script Data Set
 Element.Listing=Listing
-Element.ExtendedDataSource=Extended Data Source
-Element.ExtendedDataSet=Extended Data Set
+Element.OdaDataSet=ODA Data Set
+Element.OdaDataSource=ODA Data Source
 
 ###########################################################
 # Element property names
@@ -2152,21 +2149,21 @@ Element.SimpleMasterPage.floatingFooter=Floating Footer
 Element.SimpleMasterPage.slot.pageHeader=Page Header
 Element.SimpleMasterPage.slot.pageFooter=Page Footer
 
-#35 ExtendedDataSource ( Prefix Element.ExtendedDataSource )
-Element.ExtendedDataSource.driverName=Driver Name
-Element.ExtendedDataSource.publicDriverProperties=Public Driver Properties
-Element.ExtendedDataSource.privateDriverProperties=Private Driver Properties
+#35 OdaDataSource ( Prefix Element.OdaDataSource )
+Element.OdaDataSource.driverName=Driver Name
+Element.OdaDataSource.publicDriverProperties=Public Driver Properties
+Element.OdaDataSource.privateDriverProperties=Private Driver Properties
 
-#36 ExtendedDataSet ( Prefix Element.ExtendedDataSet )
-Element.ExtendedDataSet.queryText=Text
-Element.ExtendedDataSet.queryScript=Script
-Element.ExtendedDataSet.queryScript.toolTip=TBD
-Element.ExtendedDataSet.type=Type
-Element.ExtendedDataSet.queryChoiceType=Query Choice Type
-Element.ExtendedDataSet.resultSetName=Result Set Name
-Element.ExtendedDataSet.publicDriverProperties=Public Driver Properties
-Element.ExtendedDataSet.privateDriverProperties=Private Driver Properties
-Element.ExtendedDataSet.privateDriverDesignState=Private Driver Design State
+#36 OdaDataSet ( Prefix Element.OdaDataSet )
+Element.OdaDataSet.queryText=Text
+Element.OdaDataSet.queryScript=Script
+Element.OdaDataSet.queryScript.toolTip=TBD
+Element.OdaDataSet.type=Type
+Element.OdaDataSet.queryChoiceType=Query Choice Type
+Element.OdaDataSet.resultSetName=Result Set Name
+Element.OdaDataSet.publicDriverProperties=Public Driver Properties
+Element.OdaDataSet.privateDriverProperties=Private Driver Properties
+Element.OdaDataSet.privateDriverDesignState=Private Driver Design State
 
 ###########################################################
 # Predefined style
@@ -2377,8 +2374,8 @@ New.MultiLineData=MultiLineData
 New.ExtendedItem=ExtendedItem
 New.ScriptDataSource=ScriptDataSource
 New.ScriptDataSet=ScriptDataSet
-New.ExtendedDataSource=ExtendedDataSource
-New.ExtendedDataSet=ExtendedDataSet
+New.OdaDataSource=OdaDataSource
+New.OdaDataSet=OdaDataSet
 
 ###########################################################
 # Error Messages
