Be able to read a design that has invalid property names. Added Format Choices.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -428,10 +428,26 @@ Choices.columnAlign.left=Left
 Choices.columnAlign.center=Center
 Choices.columnAlign.right=right
 
-#59. queryChoiceType
-Choices.queryChoiceType.none=None
-Choices.queryChoiceType.text=Text
-Choices.queryChoiceType.script=Script
+#59. dateTimeFormat
+Choices.dateTimeFormat.generalDate=General Date
+Choices.dateTimeFormat.longDate=Long Date
+Choices.dateTimeFormat.mediumDate=Medium Date
+Choices.dateTimeFormat.shortDate=Short Date
+Choices.dateTimeFormat.longTime=Long Time
+Choices.dateTimeFormat.mediumTime=Medium Time
+Choices.dateTimeFormat.shortTime=Short Time
+    
+#60. numberFormat
+Choices.numberFormat.generalNumber=General Number
+Choices.numberFormat.currency=Currency
+Choices.numberFormat.fixed=Fixed
+Choices.numberFormat.percent=Percent
+Choices.numberFormat.scientific=Scientific
+Choices.numberFormat.standard=Standard
+    
+#59. StringFormat
+Choices.stringFormat.upper=Upper
+Choices.stringFormat.lower=Lower
 
 ###########################################################
 # Classes
