Adds support for parameter metadata in DtE's impl layer.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -65,7 +65,7 @@ TYPE_NOT_SUPPORTED=Type is not supported
 INVALID_FIELD_NAME=Invalid field name: {0}
 NOT_SUPPORTED_TYPE=Not supported type
 
-ILLEGAL_PARAMETER_FUN=There exists illegal parameter in the function {0}
+ILLEGAL_PARAMETER_FUN=Illegal parameter for function {0}
 RESET_RATE=User should reset a new rate guess
 
 UNSUPPORTTED_OPERATOR=The operator is not yet supported
@@ -84,10 +84,10 @@ SCRIPT_EVAL_ERROR=Error evaluating script (source:{0}, line:{1}):  {2}.
 PREPARED_QUERY_CLOSED=PreparedQuery instance is closed.
 
 QUERY_FAILURE = Invalid query definition
-NULL_POINTER = There's null pointer.
 
 INVALID_EXPR = Expression is not valid.
 INVALID_GROUP_EXPR = Group key expression {0} is not valid.
+PARAMETER_METADATA_NOT_SUPPORTED=Cannot get parameter metadata for this type of data source.
 
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position cannot be less than 1.
