- Integrated BIRT i18n framework into odaconsumer manager

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -174,3 +174,18 @@ odaconsumer.CannotSetTimeParameter=Cannot set the time value for parameter ({0})
 odaconsumer.CannotSetTimestampParameter=Cannot set the timestamp value for parameter ({0}).
 odaconsumer.CannotClearInParameters=Cannot clear the input parameter values.
 odaconsumer.UnrecognizedOdaType=Unrecognized ODA data type: {0}.
+
+odaconsumer.manager.CannotGetNamedResultsAfterExecuteQuery=Cannot get result sets by name after executeQuery() has been called.
+odaconsumer.manager.CannotSetParamBeforePrepare=Cannot set input parameters before statement has been prepared.
+odaconsumer.manager.CannotGetParamBeforeExecute=Cannot get output parameters before statement executes.
+odaconsumer.manager.CannotGetParamMdBeforePrepare=Cannot get parameter metadata before statement has been prepared.
+odaconsumer.manager.CannotSetSortSpecBeforePrepare=Cannot set the sort specification before the statement has been prepared.
+odaconsumer.manager.MaxConcurrentConnectionsReached=Maximum active concurrent connections reached.
+odaconsumer.manager.ConnectionFailed=Unable to open connection.
+odaconsumer.manager.CannotConstructConnectionFactory=Unable to create the ODA driver's connection factory.
+odaconsumer.manager.InadequatePermissionsForCompatibility=Cannot provide backwards compatibility due to inadequate permissions.
+odaconsumer.manager.ConnectionIsInactive=The established connection to the data source is not active.
+odaconsumer.manager.MaxConcurrentStatementsReached=Maximum active concurrent statements reached for this connection.
+odaconsumer.manager.PrepareFailed=Prepare failed.
+odaconsumer.manager.CannotGetResultSetMdBeforePrepare=Cannot get result set metadata before statement has been prepared.
+odaconsumer.manager.CannotExecuteBeforePrepare=Cannot execute the statement before statement has been prepared.
