--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -174,6 +174,7 @@ odaconsumer.CannotSetTimeParameter=Cannot set the time value for parameter ({0})
 odaconsumer.CannotSetTimestampParameter=Cannot set the timestamp value for parameter ({0}).
 odaconsumer.CannotClearInParameters=Cannot clear the input parameter values.
 odaconsumer.UnrecognizedOdaType=Unrecognized ODA data type: {0}.
+odaconsumer.CannotGetColumnNativeDataTypeName=Cannot get the native data type name for the column ({0}).
 
 odaconsumer.manager.CannotGetNamedResultsAfterExecuteQuery=Cannot get result sets by name after executeQuery() has been called.
 odaconsumer.manager.CannotSetParamBeforePrepare=Cannot set input parameters before statement has been prepared.
