Group and sort on computed column does not get support currently.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -70,6 +70,8 @@ RESET_RATE=User should reset a new rate guess
 
 UNSUPPORTTED_OPERATOR=The operator is not yet supported
 
+NOT_SUPPORTED_NOW=Currently this function {0} does not get support.
+
 # Wrapper Error
 INVALID_TYPE_IN_EXPR=Invalid data types in conditional expression.
 AGGREGATION_ERROR=AGGREGATION_ERROR
