Add properties for MasterPage. Fixed bug Bug#:  86240 in Bugzilla. Fixed the problem that a design that has invalid extension cannot be open.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -1894,6 +1894,8 @@ Element.MasterPage.topMargin=Top margin
 Element.MasterPage.leftMargin=Left margin
 Element.MasterPage.bottomMargin=Bottom margin
 Element.MasterPage.rightMargin=Right margin
+Element.MasterPage.headerHeight=Header height
+Element.MasterPage.footerHeight=Footer height
 Element.MasterPage.slot.contents=Contents
 
 #9. Style ( Prefix = Element.Style)
