Fix selector style broadcase, and add copyPropertyTo() in DesignElementHandle

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2485,6 +2485,7 @@ Error.SemanticError.INVALID_CUSTOM_COLOR_NAME=The custom color name "{0}" can no
 Error.SemanticError.DUPLICATE_CUSTOM_COLOR_NAME=The color pallete has duplicate custom color name "{0}".
 Error.SemanticError.EXTENSION_NOT_FOUND=The extension name "{0}" of element "{1}" is not found.
 Error.SemanticError.MISSING_EXTENSION=The extension name of element "{0}" must be defined.
+Error.SemanticError.PROPERTY_COPY_FORBIDDEN=To copy property "{0}" is forbidden.
 
 #StyleException
 Error.StyleException.FORBIDDEN=The {0} can not have a style.
