Enhancement to error system and make some change about use-defined properties.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2530,30 +2530,6 @@ Error.XMLParserException.INVALID_BOOLEAN=A Boolean attribute does not contain a 
 Error.XMLParserException.WARNINGS_FOUND=The parse completed, but recoverable errors occurred.
 Error.XMLParserException.EXCEPTION=A generic exception occurred.
 Error.XMLParserException.INVALID_INTEGER=An integer attribute contains an invalid value.
-
-#MetaDataReaderException
-Error.MetaDataReaderException.FILE_NOT_FOUND=File:{0} is not found
-Error.MetaDataReaderException.PARSER_ERROR=Paser error
-Error.MetaDataReaderException.NAME_REQUIRED=Missing name attribute.
-Error.MetaDataReaderException.DISPLAY_NAME_ID_REQUIRED=Missing displayNameID attribute 
-Error.MetaDataReaderException.MULTIPLE_CARDINALITY_REQUIRED=Missing multipleCardinality attribute. 
-Error.MetaDataReaderException.TYPE_REQUIRED=Missing type attribute.
-Error.MetaDataReaderException.INVALID_NAME_SPACE=Invalid name space. 
-Error.MetaDataReaderException.UNKNOWN_TYPE=Unknown type. 
-Error.MetaDataReaderException.VALUE_REQUIRED=Missing value. 
-Error.MetaDataReaderException.XML_NAME_REQUIRED=Missing xml name attribute. 
-Error.MetaDataReaderException.INVALID_DEFAULT=The default value is invalid. 
-Error.MetaDataReaderException.INVALID_TYPE=The type is invalid. 
-Error.MetaDataReaderException.CLASS_NAME_REQUIRED=Missing className. 
-Error.MetaDataReaderException.BUILD_FAILED=Build failed. 
-Error.MetaDataReaderException.GROUP_PREFIX_REQUIRED=Missing group prefix attribute. 
-Error.MetaDataReaderException.GROUP_NAME_ID_REQUIRED=Missing group displayNameID attribute. 
-Error.MetaDataReaderException.INVALID_CHOICE_TYPE=Invalid choiceSet name. 
-Error.MetaDataReaderException.CHOICE_TYPE_REQUIRED=Missing choiceSet name. 
-Error.MetaDataReaderException.STRUCT_TYPE_REQUIRED=Missing detailType attribute for a structList type 
-Error.MetaDataReaderException.INVALID_STRUCT_TYPE=Invalid struct type. 
-Error.MetaDataReaderException.ELEMENT_REF_TYPE_REQUIRED=Missing detailType attribute for a ElementRef type. 
-Error.MetaDataReaderException.INVALID_META_VALIDATOR=Can not initialize the validator. 
     
 #UserPropertyException
 Error.UserPropertyException.NAME_REQUIRED=The use property must have a name.
@@ -2567,3 +2543,6 @@ Error.UserPropertyException.CHOICE_VALUE_REQUIRED=The value of the user-defined 
 Error.UserPropertyException.CHOICE_NAME_REQUIRED=The name of the user-defined choice is required in user property "{0}".
 Error.UserPropertyException.INVALID_CHOICE_VALUE=The value of the choice is invalid for the type of the user property "{0}".
 Error.UserPropertyException.INVALID_DEFINITION=The user property definition is invalid.
+
+#MetaDataReaderException
+Error.MetaDataReaderException.META_DATA_ERROR=The meta-data is invalid.
