Changed display name of "queryText" from "Text" to "Query".

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2164,7 +2164,7 @@ Element.OdaDataSource.publicDriverProperties=Public driver properties
 Element.OdaDataSource.privateDriverProperties=Private driver properties
 
 #36 OdaDataSet ( Prefix Element.OdaDataSet )
-Element.OdaDataSet.queryText=Text
+Element.OdaDataSet.queryText=Query
 Element.OdaDataSet.queryScript=Script
 Element.OdaDataSet.queryScript.toolTip=TBD
 Element.OdaDataSet.type=Type
