Enhance odaconsumer parameter support 	- Prevent different parameter hint names to be defined for the same parameter position. 	- Enhanced parameter setting logic to be more robust for handling drivers that claim support for named parameter but in fact does not.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -109,7 +109,10 @@ odaconsumer.CannotGetParameterPrecision=Cannot get the precision for parameter (
 odaconsumer.CannotGetParameterIsNullable=Cannot determine the nullability for parameter ({0}).
 odaconsumer.NonInputParamMergeWithInputHint=The runtime parameter metadata cannot be merged with the input parameter hint ({0}) because the runtime parameter is not in the input mode.
 odaconsumer.NonOutputParamMergeWithOutputHint=The runtime parameter metadata cannot be merged with the output parameter hint ({0}) because the runtime parameter is not in the output mode.
-odaconsumer.SameParamNameForDifferentHints=Cannot use the same parameter name to represent different parameter hints.
+odaconsumer.SameParamNameForDifferentHints=Another parameter in the data set''s {0} is defined with the same name ({1}).
+odaconsumer.DifferentParamNameForSamePosition=Another parameter ({0}) in the data set''s {1} is defined with the same position ({2}).
+odaconsumer.InputParameters=input parameters
+odaconsumer.OutputParameters=output parameters
 odaconsumer.ParameterValueIsNull=Parameter value is null.
 odaconsumer.UnsupportedParameterValueType=Unsupported parameter value type: {0}.
 odaconsumer.UnknownExceptionThrown=Unknown exception thrown in the last setter call.
