Use extensionName to instead of extension in ROM.def. Use extensionName to replace name for Element in element.exsd.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -2107,7 +2107,8 @@ Element.MultiLineData.valueExpr=Value expression
 Element.MultiLineData.contentTypeExpr=Content type expression
 
 #27.ExtendedItem   ( prefix  Element.ExtendedItem )
-Element.ExtendedItem.extension=extension
+Element.ExtendedItem.extensionName=extension name
+Element.ExtendedItem.extension=extension name
 
 #28.DataSource ( prefix Element.DataSource )
 Element.DataSource.beforeOpen=Before open
