Move DataTypeUtil and DataType form org.eclipse.birt.data to org.eclipse.birt.core

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -60,7 +60,6 @@ ILLEGAL_PARAMETER=User doesn't input correct parameter or enough parameter
 ILLEGAL_DATA=There exists illegal data
 NO_SOLUTION_FOUND=NOSOLUTIONFOUND
 INVALID_FETCH_SCIRPT=Fetch script of Scripted DataSet is not valid.
-CONVERT_FAILS=Can not convert it to {0}.
 TYPE_NOT_SUPPORTED=Type is not supported
 INVALID_FIELD_NAME=Invalid field name: {0}
 NOT_SUPPORTED_TYPE=Not supported type
@@ -73,6 +72,7 @@ UNSUPPORTTED_OPERATOR=The operator is not yet supported
 NOT_SUPPORTED_NOW=Currently this function {0} does not get support.
 
 # Wrapper Error
+DATATYPEUTIL_ERROR=An error is thrown by DataTypeUtil.
 INVALID_TYPE_IN_EXPR=Invalid data types in conditional expression.
 AGGREGATION_ERROR=AGGREGATION_ERROR
 TRANSFORM_ERROR=TRANSFORM_ERROR
