Support default data set type in odaconsumer when the caller doesn't specify a data set type.

--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -99,7 +99,8 @@ odaconsumer.OdaInitEntryNotFound={0} cannot be found or cannot be instantiated.
 odaconsumer.OdaDriverOnUnsupportedPlatform=The driver ({0}) does not support {1}.
 odaconsumer.CannotGenerateUrl=Cannot generate URL ({0}) for the classloader.
 odaconsumer.UnsupportedNativeType=Unsupported native type ({0}) for the data set type ({1}) of driver ({2}).
-odaconsumer.UnsupportedDataSetType=The data set type ({0}) is not supported by the driver({1}).
+odaconsumer.UnsupportedDataSetType=The data set type ({0}) is not supported by the driver ({1}).
+odaconsumer.CannotDetermineDefaultDataSetType=Null data set type. Cannot determine the default data set type for the driver ({0}).
 odaconsumer.ParameterNameCannotBeEmptyOrNull=Parameter name cannot be empty or null.
 odaconsumer.ParameterPositionIsOneBased=Parameter position cannot be less than 1.
 odaconsumer.CannotGetParameterTypeName=Cannot get the type name for parameter ({0}).
