Correct problems for stringFormat.

--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/i18n/Messages.properties
@@ -441,8 +441,8 @@ Choices.numberFormat.scientific=Scientific
 Choices.numberFormat.standard=Standard
     
 #59. StringFormat
-Choices.stringFormat.upper=Upper
-Choices.stringFormat.lower=Lower
+Choices.stringFormat.upper=Uppercase
+Choices.stringFormat.lower=Lowercase
 
 ###########################################################
 # Classes
