--- a/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
+++ b/data/org.eclipse.birt.data/src/org/eclipse/birt/data/engine/i18n/Messages.properties
@@ -29,7 +29,7 @@ INVALID_JS_EXPR=Invalid Javascript expression
 INVALID_TOTAL_NAME=Invalid Total function name: {0}
 INVALID_CALL_AGGR=Aggregate function call is not expected in this expression.
 INVALID_EXPR_HANDLE=Invalid expression handle
-
+EXPRESSION_CANNOT_BE_NULL_OR_BLANK=The expression cannot be null or blank
 NO_CURRENT_ROW=No current row
 IT_NOT_STARTED=This iterator has not started
 INVALID_KEY_COLUMN=Invalid sort key column: {0}
@@ -90,7 +90,6 @@ QUERY_FAILURE = Invalid query definition
 INVALID_EXPR = Expression is not valid.
 INVALID_GROUP_EXPR = Group key expression {0} is not valid.
 PARAMETER_METADATA_NOT_SUPPORTED=Cannot get parameter metadata for this type of data source.
-
 odaconsumer.ColumnNameCannotBeEmptyOrNull=Column name cannot be empty or null.
 odaconsumer.ColumnPositionIsOneBased=Column position cannot be less than 1.
 odaconsumer.ColumnAliasCannotBeEmpty=Column alias cannot be an empty string.
